--- a/caravan/style.css
+++ b/caravan/style.css
@@ -18,7 +18,7 @@ a {
 header {
 	width: 90%;
 	height: 15px 0;
-	margin: 0 auto;
+	margin: 15px auto;
 	text-align: center;
 }
 
@@ -118,6 +118,22 @@ main {
 	border-radius: 3px;
 	color: #fff;
 	font-size: 11px;
+}
+
+.pagination {
+	text-align: center;
+	padding-top: 50px;
+}
+
+.pagination-box {
+	width: 30px;
+	height: 30px;
+	display: inline-block;
+	color: #fff;
+	background-color: #acabab;
+	border-radius: 3px;
+	margin: 0 5px;
+	line-height: 30px;
 }
 
 .sideber {
