--- a/1-6/1-6.css
+++ b/1-6/1-6.css
@@ -9,7 +9,7 @@
 }
 
 .box1 {
-	background-image: url(img/box1.jpg);
+	background-image: url(box1.jpg);
 	background-position: center;
 	background-size: cover;
 	height: 200px;
@@ -17,21 +17,21 @@
 
 .box2 {
 	height: 200px;
-	background-image: url(img/box2.jpg);
+	background-image: url(box2.jpg);
 	background-size: cover;
 	background-position: center;
 }
 
 .box3 {
 	height: 200px;
-	background-image: url(img/box3.jpg);
+	background-image: url(box3.jpg);
 	background-size: cover;
 	background-position: center;
 }
 
 .box4 {
 	height: 200px;
-	background-image: url(img/box4.jpg);
+	background-image: url(box4.jpg);
 	background-size: cover;
 	background-position: center;
 }
